--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 					<div class="col-md-6">
 						<span>© Push It Fitness 2017</span>
 					</div>
-					<div class="col-md-6 text-lg-right">
+					<!--<div class="col-md-6 text-lg-right">
 						<a href="#"><span class="social-icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span></a>
 						<a href="#"><span class="social-icon"><i class="fa fa-twitter-square" aria-hidden="true"></i></span></a>
 						<a href="#"><span class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
 						<a href="#"><span class="social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</footer>
