made changes to index.html
changed layout for mobile footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+		
+		<title>Coming Soon</title>
+		
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg pushit-navbar">
@@ -57,15 +60,15 @@
 		<footer>
 			<div class="container-fluid footer-container">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-8">
 						<span>© Push It Fitness 2017</span>
 					</div>
-					<!--<div class="col-md-6 text-lg-right">
-						<a href="#"><span class="social-icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span></a>
-						<a href="#"><span class="social-icon"><i class="fa fa-twitter-square" aria-hidden="true"></i></span></a>
-						<a href="#"><span class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
-						<a href="#"><span class="social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a>
-					</div>-->
+					<div class="col-4 text-right social-media-container">
+						<a href="https://www.facebook.com/PushItFitnessMelb" target="_blank"><span class="social-icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span></a>
+						<!--<a href="#"><span class="social-icon"><i class="fa fa-twitter-square" aria-hidden="true"></i></span></a>-->
+						<a href="mailto:pushitfitness@outlook.com"><span class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
+						<!--<a href="#"><span class="social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a>-->
+					</div>
 				</div>
 			</div>
 		</footer>
